tests/snapshots/render__detail_tab_activity_empty.snap
---
source: tests/render.rs
expression: terminal.backend()
---
"┌──┐┌──┐┌ octo-org/repo-charlie  newest ───────────────────────────────▲┌ repo-charlie #2628 ──────────────────────────┐"
"│ ││ ││                                    ±                    █│Fix panic when list is empty                  │"
"│o ││r ││▶ #2628 by @user-01            0  · ·                6mo    2w█│@user-01  fix/handler-panic-on-missing-config…│"
"│c ││e ││      Fix panic when list is empty                           █│  Overview   Activity   Commits   Checks  │"
"│t ││p ││  #2625 by @user-02            0  · ·                45m    2y█│┌  Activity ────────────────────────────────┐│"
"│o ││o ││      Add keyboard navigation to sidebar                     █││(no comments)                               ││"
"│- ││- ││  #2621 by @user-03            0  · ·                 1d    3h█││                                            ││"
"│o ││c ││      chore(deps): bump serde from 1.0.1 to 1.0.2            █││                                            ││"
"│r ││h ││  #2609 by @user-04            0  · ·                 2w    3d█││                                            ││"
"│g ││a ││      feat: add dark mode support                            █││                                            ││"
"│  ││r ││  #2607 by @user-05            0  · ·                 2y   6mo█││                                            ││"
"│  ││l ││      refactor: simplify auth flow                           █││                                            ││"
"│  ││i ││  #2606 by @user-06            0  · ·                45m   45m█││                                            ││"
"│  ││e ││      docs: update README with installation steps            █││                                            ││"
"│  ││  ││  #2579 by @user-07            0  · ·                 1d    3h█││                                            ││"
"│  ││  ││      fix: resolve memory leak in cache                      █││                                            ││"
"│  ││  ││  #2569 by @user-08            0  · ·                 2w    3d║││                                            ││"
"│  ││  ││      test: add integration tests for API                    ║││                                            ││"
"│  ││  ││  #2563 by @user-09            0  · ·                 2y   6mo║││                                            ││"
"│  ││  ││      style: format code with rustfmt                        ║││                                            ││"
"│  ││  ││  #2548 by @user-10            0  · ·                 3h   45m║││                                            ││"
"│  ││  ││      perf: optimize database queries                        ║││                                            ││"
"│  ││  ││  #2527 by @user-11            0  · ·                 3d    1d║││                                            ││"
"│  ││  ││      chore: remove unused dependencies                      ║││                                            ││"
"│  ││  ││  #2525 by @user-12            0  · ·                6mo    2w║││                                            ││"
"│  ││  ││      feat: implement search functionality                   ║││                                            ││"
"│  ││  ││  #2517 by @user-13            0  · ·                45m    2y║││                                            ││"
"│  ││  ││      bugfix: handle null pointer exception                  ║││                                            ││"
"│  ││  ││  #2511 by @user-14            0  · ·                 1d    3h║││                                            ││"
"│  ││  ││      refactor: extract service layer                        ║││                                            ││"
"│  ││  ││  #2490 by @dependabot[bot]    0  · ·                 2w    3d║││                                            ││"
"│  ││  ││      docs: add contributing guidelines                      ║││                                            ││"
"│  ││  ││  #2452 by @user-15            0  · ·                 2y   6mo║││                                            ││"
"│  ││  ││      test: fix flaky unit tests                             ║││                                            ││"
"│  ││  ││  #2447 by @user-16            0  · ·                 3h   45m║││                                            ││"
"│  ││  ││      feat: add logging middleware                           ║││                                            ││"
"│  ││  ││  #2436 by @user-17            0  · ·                 3d    1d║││                                            ││"
"│  ││  ││      fix: correct timezone handling                         ║│└────────────────────────────────────────────┘│"
"└──┘└──┘└ f·page  p·prs (30)  i·issues ────────────────────────────────▼└──────────────────────────────────────────────┘"
" space select  ^a select all  v approve  m merge  u rebase  C checkout  c comment  d diff  o open  y copy URL  ? help   "
