tests/snapshots/render__diff_view_overlay_shown.snap
---
source: tests/render.rs
expression: terminal.backend()
---
"┌ diff: src/main.rs ───────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│diff --git a/src/main.rs b/src/main.rs                                                                                │"
"│--- a/src/main.rs                                                                                                     │"
"│+++ b/src/main.rs                                                                                                     │"
"│@@ -1,3 +1,4 @@                                                                                                       │"
"│ fn main() {                                                                                                          │"
"│+    println!("added");                                                                                               │"
"│-    println!("removed");                                                                                             │"
"│ }                                                                                                                    │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
